tests/ui/const-generics/generic_const_exprs/ice-generics_of-no-entry-found-for-key-113017.stderr
error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/ice-generics_of-no-entry-found-for-key-113017.rs:8:15
   |
LL |     for<const N: usize = { || {}; 1 }> ():,
   |               ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: defaults for generic parameters are not allowed in `for<...>` binders
  --> $DIR/ice-generics_of-no-entry-found-for-key-113017.rs:8:9
   |
LL |     for<const N: usize = { || {}; 1 }> ():,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
